<resources>
    <string name="app_name">Virtual Training Services</string>
    <string name="login">Login</string>
    <string name="enter_password">ENTER PASSWORD</string>
    <string name="enter_username">ENTER USERNAME</string>
    <string name="logo">Logo</string>
    <string name="VTS">Virtual Training Services</string>

    <!--naya login -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_having_account">Already Having an Account?</string>
    <string name="log_in">Log In</string>
    <string name="not_having_account">Not Having an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>

    <string name="home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_username">Santosh Thapa</string>
    <string name="nav_useremail">santoshthapa@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_attendance">Attendance</string>
    <string name="menu_weekly_test">Weekly Test</string>
    <string name="menu_performance">Performance</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_profile">Profile</string>
    <string name="home_events">Events</string>
    <string name="home_routine">Routine</string>
    <string name="home_information">Information</string>
    <string name="home_training_education">Training Education</string>
    <string name="home_assignments">Assignments</string>
    <string name="home_downloads">Downloads</string>
    <string name="home_studentInfo">Student Information</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="student_and_admin">Student and Admin</string>

</resources>
