<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/ic_attendance"
            android:title="@string/menu_attendance" />
        <item
            android:id="@+id/nav_weekly_test"
            android:icon="@drawable/ic_weekly_test"
            android:title="@string/menu_weekly_test" />
        <item
            android:id="@+id/nav_performance"
            android:icon="@drawable/ic_performance"
            android:title="@string/menu_performance" />
        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_accounts"
            android:title="@string/menu_accounts" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />

    </group>
</menu>
