<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/img_bg"
android:orientation="vertical"
tools:context="LoginActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/splash_gradient_bg"
    android:orientation="vertical">

    <ImageView
        android:angle="70"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/khukri"
        android:contentDescription="@string/logo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/VTS"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etLoginUsername"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@color/colorEditTextBg"
            android:hint="@string/enter_username"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="#FFF"
            tools:targetApi="o" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorEditTextBg"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:id="@+id/etLoginPassword"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="#FFF"
            tools:targetApi="o"
            android:autofillHints="" />

        <Button
            android:layout_width="180dp"
            android:layout_height="54dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/login_button"
            android:layout_gravity="center"
            android:text="@string/login"
            android:id="@+id/btnLogin"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/not_having_account"
            android:textColor="#ccc" />

        <Button
            android:id="@+id/btnLoginRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#aaa"
            android:text="@string/register"
            android:textColor="@android:color/white" />
    </LinearLayout>


</LinearLayout>

</LinearLayout>
